# xontrib-jump-to-dir

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
tests/: test_xontrib.py
xontrib/: jump_to_dir.py
