
[project]
name = "xontrib-jump-to-dir"
version = "0.0.3"
license = {file = "LICENSE"}
description = "Jump to used before directory by part of the path. Lightweight zero-dependency implementation of autojump or zoxide projects functionality."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
]
requires-python = ">=3.8"
dependencies = ["xonsh>=0.12.5"]
authors = [
    { name = "anki-code", email = "no@no.no" },
]
[project.readme]
file = "README.md"
content-type = "text/markdown"





[project.urls]

Homepage = "https://github.com/anki-code/xontrib-jump-to-dir"
Documentation = "https://github.com/anki-code/xontrib-jump-to-dir/blob/master/README.md"
Code = "https://github.com/anki-code/xontrib-jump-to-dir"
"Issue tracker" = "https://github.com/anki-code/xontrib-jump-to-dir/issues"




[project.optional-dependencies]
dev = ["pytest>=7.0"]



[build-system]
requires = [
    "setuptools>=62",
    "wheel",               # for bdist package distribution
]
build-backend = "setuptools.build_meta"
[tool.setuptools]
    
packages = ["xontrib"]
package-dir = {xontrib = "xontrib"}
    
platforms = ["any"]
include-package-data = false
[tool.setuptools.package-data]
    
xontrib = ["*.xsh"]
    


[tool.isort]
profile = "black"

[tool.black]
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | disk-cache.sqlite3
)/
'''
